--- a/frontend/rigel-app/package.json
+++ b/frontend/rigel-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "antd": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
