feat: mongo, kafka, two queues

--- a/backend/video_processing/src/config/kafka.prod.env
+++ b/backend/video_processing/src/config/kafka.prod.env
@@ -1,4 +1,5 @@
-VIDEO_PROCESSING_TOPIC="video_processing"
-VIDEO_RECEIVING_TOPIC="video_receiving"
-VIDEO_PROCESSING_HOST="localhost"
-VIDEO_PROCESSING_PORT=9092
+KAFKA_VIDEO_RECEIVING_TOPIC=videoReceiving
+KAFKA_VIDEO_PROCESSING_TOPIC=videoProcessing
+KAFKA_VIDEO_HOST="localhost"
+KAFKA_VIDEO_GROUP_ID="ConsumerGroup"
+KAFKA_VIDEO_PORT=9092
