--- a/backend/video_streaming/pkg/config/envs/prod.env
+++ b/backend/video_streaming/pkg/config/envs/prod.env
@@ -1,3 +1,13 @@
+KAFKA_VIDEO_RECEIVING_TOPIC=videoReceiving
+KAFKA_VIDEO_PROCESSING_TOPIC=videoProcessing
+KAFKA_VIDEO_HOST="localhost"
+KAFKA_VIDEO_GROUP_ID="ConsumerGroup"
+KAFKA_VIDEO_PORT=9092
+POSTGRES_HOST="localhost"
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD="password"
+POSTGRES_USER="admin"
+POSTGRES_DB="user_settings"
 VIDEO_DIRECTORY="videos"
 HOST="localhost"
 HTTP_PORT=8080
