--- a/backend/video_upload/src/config/mongo.prod.env
+++ b/backend/video_upload/src/config/mongo.prod.env
@@ -1,5 +1,2 @@
-MONGO_INITDB_ROOT_USERNAME="admin"
-MONGO_INITDB_ROOT_PASSWORD="password"
-ME_CONFIG_MONGODB_ADMINUSERNAME="admin"
-ME_CONFIG_MONGODB_ADMINPASSWORD="password"
-ME_CONFIG_MONGODB_URL="mongodb://admin:password@localhost:27017/"
+MONGO_HOST=localhost
+MONGO_PORT=27017
