feat: video processing

--- a/backend/video_processing/src/config/kafka.prod.env
+++ b/backend/video_processing/src/config/kafka.prod.env
@@ -1,5 +1,5 @@
 KAFKA_VIDEO_RECEIVING_TOPIC=videoReceiving
 KAFKA_VIDEO_PROCESSING_TOPIC=videoProcessing
-KAFKA_VIDEO_HOST="localhost"
+KAFKA_VIDEO_HOST=localhost
 KAFKA_VIDEO_GROUP_ID="ConsumerGroup"
 KAFKA_VIDEO_PORT=9092
