--- a/backend/video_streaming/pkg/config/envs/prod.env
+++ b/backend/video_streaming/pkg/config/envs/prod.env
@@ -1,6 +1,6 @@
 KAFKA_VIDEO_RECEIVING_TOPIC=videoReceiving
 KAFKA_VIDEO_PROCESSING_TOPIC=videoProcessing
-KAFKA_VIDEO_HOST="localhost"
+KAFKA_VIDEO_HOST=localhost
 KAFKA_VIDEO_GROUP_ID="ConsumerGroup"
 KAFKA_VIDEO_PORT=9092
 POSTGRES_HOST="localhost"
