--- a/frontend/rigel-app/package.json
+++ b/frontend/rigel-app/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.9.0",
+    "screenfull": "^6.0.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
