--- a/frontend/rigel-app/package.json
+++ b/frontend/rigel-app/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.0.1",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.2",
+    "material-icons": "^1.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
